--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -24,6 +24,7 @@ repos:
       - id: yamllint
         args:
           - --strict
+        exclude: ^tests/
 
   - repo: https://github.com/rhysd/actionlint
     rev: v1.7.4
