test: 🧪 add vipAccess property vipAccess to test optional boxed type properties

--- a/tests/redocly_museum_api_1_2_1.yaml
+++ b/tests/redocly_museum_api_1_2_1.yaml
@@ -394,6 +394,11 @@ components:
           $ref: "#/components/schemas/EventDates"
         price:
           $ref: "#/components/schemas/EventPrice"
+        vipAccess:
+          type:
+            - boolean
+          description: Indicates if the event has VIP access.
+          example: false
       required:
         - name
         - location
